@@ -21,6 +21,7 @@
         <url>https://github.com/databricks/databricks-jdbc</url>
     </scm>
   <properties>
+    <arrow.version>13.0.0</arrow.version>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
     <mockito.version>5.2.0</mockito.version>
@@ -32,15 +33,29 @@
     <immutables.value.version>2.9.2</immutables.value.version>
     <httpclient.version>4.5.14</httpclient.version>
     <commons-io.version>2.13.0</commons-io.version>
+    <databricks-sdk.version>0.7.0</databricks-sdk.version>
+    <maven-surefire-plugin.version>3.0.0-M6</maven-surefire-plugin.version>
   </properties>
-
   <dependencies>
     <dependency>
       <groupId>com.databricks</groupId>
       <artifactId>databricks-sdk-java</artifactId>
-      <version>0.1.1</version>
-      <scope>system</scope>
-      <systemPath>${project.basedir}/src/main/resources/databricks-sdk-java-0.1.1.jar</systemPath>
+      <version>${databricks-sdk.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.arrow</groupId>
+      <artifactId>arrow-memory-core</artifactId>
+      <version>${arrow.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.arrow</groupId>
+      <artifactId>arrow-vector</artifactId>
+      <version>${arrow.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.arrow</groupId>
+      <artifactId>arrow-memory-netty</artifactId>
+      <version>${arrow.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
@@ -96,12 +111,6 @@
       <version>${immutables.value.version}</version>
       <scope>provided</scope>
     </dependency>
-    <!--    TODO: remove before going to production    -->
-    <dependency>
-      <groupId>com.databricks</groupId>
-      <artifactId>databricks-jdbc</artifactId>
-      <version>2.6.33</version>
-    </dependency>
   </dependencies>
 
   <build>
@@ -117,6 +126,14 @@
               </goals>
             </execution>
           </executions>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>${maven-surefire-plugin.version}</version>
+          <configuration>
+            <argLine>--add-opens=java.base/java.nio=ALL-UNNAMED</argLine>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
